# organizational-structure-api_test-task

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 164dfea374cf_fix_typo.py  557862365341_add_cascade.py  7b4a7f14c27d_create_departments_and_employees.py  f49ddc3d4c54_add_unique_constraint.py
src/: api.py  db.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py  settings.py  unit_of_work.py
src/department/: enums.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
src/employee/: models.py  repository.py  schemas.py
tests/department/: test_service.py
